--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Official Website of minlia.com</p>
 
 
-        <p class="view"><a href="https://github.com/minliacom">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/minlia">View My GitHub Profile</a></p>
 
       </header>
       <section>
